# tetration

./: README.md  pyproject.toml
tetration/: __init__.py  tetration.py
