[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tetration"
version = "0.0.1"
authors = [
  { name="Tanmay Khatri", email="tanmaykhatri46@gmail.com" },
]
description = "The 4th Hyperoperation : Tetration"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Tanmay53/tetration"
"Bug Tracker" = "https://github.com/Tanmay53/tetration/issues"